--- a/compose.yml
+++ b/compose.yml
@@ -4,10 +4,41 @@ services:
   django:
     build:
       context: .
+      dockerfile: ./compose/production/django/Dockerfile
     depends_on:
       postgres:
         condition: service_healthy
       redis:
+        condition: service_healthy
+    networks:
+      default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
+    command: /start
+    # healthcheck:
+    #   interval: 30s
+    #   timeout: 30s
+    #   start_period: 30s
+    #   retries: 5
+    healthcheck:
+      test: ["CMD", "/bin/true"]
+      interval: 30s       # Optional: Time between health checks (default: 30s)
+      timeout: 10s        # Optional: Time to wait before considering the check failed
+      retries: 3          # Optional: Number of retries before marking as unhealthy
+      start_period: 5s    # Optional: Initial delay before starting health checks
+    deploy:
+      replicas: ${DJANGO_REPLICAS:-1}
+
+  django-secondary:
+    build:
+      context: .
+      dockerfile: ./compose/production/django/Dockerfile
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      django:
         condition: service_healthy
     networks:
       default: {}
@@ -20,7 +51,7 @@ services:
       start_period: 30s
       retries: 5
     deploy:
-      replicas: ${DJANGO_REPLICAS:-1}
+      replicas: ${DJANGO_REPLICAS:-0}
 
   postgres:
     build:
@@ -44,8 +75,10 @@ services:
       - net.ipv6.conf.all.disable_ipv6=0
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+    deploy:
+      replicas: ${REDIS_REPLICAS:-1}
 
-  gobgp:
+  gobgp-primary:
     image: jauderho/gobgp:v3.33.0
     networks:
       default: {}
@@ -56,6 +89,17 @@ services:
     deploy:
       replicas: ${GOBGP_REPLICAS:-1}
 
+  gobgp-secondary:
+    image: jauderho/gobgp:v3.33.0
+    networks:
+      default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
+    healthcheck:
+      test: ["CMD", "gobgp", "global"]
+    deploy:
+      replicas: ${GOBGP_REPLICAS:-0}
+
   translator:
     build:
       context: .
@@ -63,7 +107,9 @@ services:
     depends_on:
       redis:
         condition: service_healthy
-      gobgp:
+      gobgp-primary:
+        condition: service_healthy
+      django:
         condition: service_healthy
     networks:
       default: {}
@@ -71,3 +117,21 @@ services:
       - net.ipv6.conf.all.disable_ipv6=0
     deploy:
       replicas: ${TRANSLATOR_REPLICAS:-1}
+
+  translator-secondary:
+    build:
+      context: .
+      dockerfile: ./compose/local/translator/Dockerfile
+    depends_on:
+      redis:
+        condition: service_healthy
+      gobgp-secondary:
+        condition: service_healthy
+      django-secondary:
+        condition: service_started # TODO turn this to healthy once we re-add the healthcheck.
+    networks:
+      default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
+    deploy:
+      replicas: ${TRANSLATOR_REPLICAS:-0}
