refactor(services): rename gobgp-primary to gobgp for consistency

--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -81,7 +81,7 @@ services:
     deploy:
       replicas: 2
 
-  gobgp-primary:
+  gobgp:
     volumes:
       - $CI_PROJECT_DIR/gobgp_config:/config:z
     ports:
