fix: add the right files...

--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -17,6 +17,7 @@ services:
           tag: scram-django
     env_file:
       - ./.envs/.production/.django
+      - ./.envs/.local/.django-primary
       - ./.envs/.production/.postgres
       - /etc/vault.d/secrets/kv_root_security.env
     volumes:
@@ -93,6 +94,7 @@ services:
           tag: scram-translator
     env_file:
       - ./.envs/.production/.translator
+      - ./.envs/.local/.translator-primary
 
 networks:
   default:
