--- a/compose.yml
+++ b/compose.yml
@@ -32,7 +32,7 @@ services:
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -d scram -U debug"]
     deploy:
       replicas: ${POSTGRES_ENABLED:-0}
 
