--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -31,6 +31,8 @@ services:
       - local_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.local/.postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d scram -U debug"]
     deploy:
       replicas: ${POSTGRES_ENABLED:-1}
     ports:
