chore: allow uv to use pre-releases if we have to (behave-django depends on pre-releases of behave :/)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,3 +137,6 @@ ignore_errors = true
 
 [tool.django-stubs]
 django_settings_module = "config.settings.test"
+
+[tool.uv]
+prerelease = "if-necessary-or-explicit"
