chore: allow pre-release, this time inline.

--- a/.github/workflows/pytest_next_python.yml
+++ b/.github/workflows/pytest_next_python.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install uv
-          uv pip install --system -r requirements/local.txt
+          uv pip install --system -r requirements/local.txt --prerelease=allow
           # https://github.com/pytest-dev/pytest-github-actions-annotate-failures/pull/68 isn't yet in a release
           uv pip install --system git+https://github.com/pytest-dev/pytest-github-actions-annotate-failures.git@6e66cd895fe05cd09be8bad58f5d79110a20385f
 
