--- a/compose/local/docs/Dockerfile
+++ b/compose/local/docs/Dockerfile
@@ -1,6 +1,6 @@
 ARG PYTHON_IMAGE_VER=3.12
 
-FROM python:${PYTHON_IMAGE_VER}-slim-bookworm
+FROM python:${PYTHON_IMAGE_VER}-slim-trixie
 
 ENV PIP_ROOT_USER_ACTION ignore
 ENV PYTHONUNBUFFERED 1
