--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -1,7 +1,7 @@
 ARG PYTHON_IMAGE_VER=3.12
 
 
-FROM python:${PYTHON_IMAGE_VER}-slim-trixie
+FROM python:${PYTHON_IMAGE_VER}-slim-bookworm
 
 
 ENV PYTHONUNBUFFERED 1
