--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -80,7 +80,7 @@ services:
     networks:
       default: {}
       peering:
-        priority: 1000
+        gw_priority: 1000
         ipv4_address: ${SCRAM_V4_ADDRESS}
         ipv6_address: ${SCRAM_V6_ADDRESS}
     ports:
