fix(postgres): use new folder structure.

--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -30,7 +30,7 @@ services:
       options:
           tag: scram-postgres
     volumes:
-      - production_postgres_data:/var/lib/postgresql/data:Z
+      - production_postgres_data:/var/lib/postgresql:Z
       - production_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.production/.postgres
