fix(postgres): use new folder structure.

--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -27,7 +27,7 @@ services:
 
   postgres:
     volumes:
-      - local_postgres_data:/var/lib/postgresql/data:Z
+      - local_postgres_data:/var/lib/postgresql:Z
       - local_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.local/.postgres
