ci(next-python): make these neutral checks since we know that py3.13 isn't supported until either libraries get fixed or we upgrade to django 5.2 or newer.

--- a/.github/workflows/behave_next_python.yml
+++ b/.github/workflows/behave_next_python.yml
@@ -17,6 +17,7 @@ jobs:
   behave_next_python:
     name: Run Behave
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       max-parallel: 4
       matrix:
