--- a/.github/workflows/pytest_next_python.yml
+++ b/.github/workflows/pytest_next_python.yml
@@ -17,6 +17,7 @@ jobs:
   pytest_next_python:
     name: Run Pytest
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       max-parallel: 4
       matrix:
