--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 exclude: 'docs|migrations|.git|.tox'
-default_stages: [pre-commit]
+default_stages: [commit]
 fail_fast: true
 
 repos:
@@ -10,10 +10,8 @@ repos:
       - id: end-of-file-fixer
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.0
+    rev: v0.14.10
     hooks:
-      # Run the linter.
-      - id: ruff
-        args: [ --fix ]
-      # Run the formatter.
       - id: ruff-format
+      - id: ruff-check
+        args: [--fix, --exit-non-zero-on-fix]
