--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -95,6 +95,29 @@ services:
     env_file:
       - ./.envs/.production/.translator
 
+
+  celery-worker:
+    volumes:
+      - ./scheduler/src/scheduler/:/app/scheduler:ro
+    env_file:
+      - ./.envs/.production/.celery
+
+  celery-beat:
+    command:
+      ["celery", "-A", "scheduler.app:scram_api_scheduler", "beat", "--loglevel=info"]
+    env_file:
+      - ./.envs/.production/.celery
+
+
+  flower:
+    env_file:
+      - ./.envs/.production/.celery
+    command:
+      ["celery", "-A", "scheduler.app:scram_api_scheduler", "flower", "--port=5555"]
+    ports:
+      - "5555:5555"
+
+
 networks:
   default:
     enable_ipv6: true
