--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[project]
+name = "SCRAM"
+version = "1.5.1"
+
 # ==== pytest ====
 [tool.pytest.ini_options]
 addopts = "--ds=config.settings.test --reuse-db"
@@ -139,3 +143,8 @@ module = "*.migrations.*"
 
 [tool.django-stubs]
 django_settings_module = "config.settings.test"
+
+[tool.uv.workspace]
+members = [
+    "scheduler",
+]
