tests(scheduler): add tests for scheduler and combine with django other reports

--- a/.github/workflows/behave.yml
+++ b/.github/workflows/behave.yml
@@ -70,6 +70,9 @@ jobs:
       - name: Upload Coverage to Coveralls
         if: matrix.python-version == '3.12'
         uses: coverallsapp/github-action@v2
+        with:
+            parallel: true
+            flag-name: behave
 
       - name: Upload Coverage to GitHub
         if: matrix.python-version == '3.12'
