chore(coverage): listen to the robot; do what it says

--- a/.github/workflows/coverage-finish.yml
+++ b/.github/workflows/coverage-finish.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   finish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Finish Coveralls
         uses: coverallsapp/github-action@v2
