chore(uv): I think I got the workspace stuff done right now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,7 +144,6 @@ module = "*.migrations.*"
 [tool.django-stubs]
 django_settings_module = "config.settings.test"
 
+
 [tool.uv.workspace]
-members = [
-    "scheduler",
-]
+exclude = ["scheduler"]
