--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "1.5.1"
 
 # ==== pytest ====
 [tool.pytest.ini_options]
-addopts = "--ds=config.settings.test --reuse-db"
+addopts = [
+  "--ds=config.settings.test",
+  "--reuse-db",
+  "--ignore=scheduler"
+]
 minversion = "6.0"
 python_files = [
   "tests.py",
