--- a/scheduler/pyproject.toml
+++ b/scheduler/pyproject.toml
@@ -24,7 +24,15 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 # disable the django stuff that gets inherited from the main project and enable coverage.
-addopts = ["-p", "no:sugar", "-p", "no:django", "--cov=src", "--cov-report=term-missing", "--cov-report=html"]
+addopts = [
+  "-p",
+  "no:sugar",
+  "-p",
+  "no:django",
+  "--cov=src",
+  "--cov-report=term-missing",
+  "--cov-report=html",
+  "--cov-report=xml:coverage.xml"]
 
 [tool.coverage.run]
 branch = true
