--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -104,5 +104,6 @@ jobs:
         if: matrix.python-version == '3.12'
         uses: 5monkeys/cobertura-action@v14
         with:
+          report_name: "Pytest Scheduler Coverage"
           path: ./scheduler/coverage.xml
           minimum_coverage: "80"
