--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -10,6 +10,7 @@ on:
       - main
       - develop
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -60,6 +61,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install uv
+          # https://github.com/pytest-dev/pytest-github-actions-annotate-failures/pull/68 isn't yet in a release
           uv pip install --system -r requirements/local.txt --prerelease=allow
           uv pip install --system git+https://github.com/pytest-dev/pytest-github-actions-annotate-failures.git@6e66cd895fe05cd09be8bad58f5d79110a20385f
 
@@ -88,7 +90,6 @@ jobs:
 
       - name: Run Scheduler Tests
         run: |
-          pip install uv
           cd scheduler
           uv run pytest
 
