--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -60,9 +60,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install uv
+          python -m pip install uv pytest-github-actions-annotate-failures
           uv pip install --system -r requirements/local.txt --prerelease=allow
-          uv pip install pytest-github-actions-annotate-failures
 
       - name: Apply migrations
         env:
