--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -60,10 +60,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install uv
+          python -m pip install uv pytest-github-actions-annotate-failures
           uv pip install --system -r requirements/local.txt --prerelease=allow
-          # https://github.com/pytest-dev/pytest-github-actions-annotate-failures/pull/68 isn't yet in a release
-          uv pip install --system git+https://github.com/pytest-dev/pytest-github-actions-annotate-failures.git@6e66cd895fe05cd09be8bad58f5d79110a20385f
 
       - name: Apply migrations
         env:
@@ -82,3 +80,29 @@ jobs:
           DATABASE_URL: "postgres://scram:@localhost:5432/test_scram_${{ matrix.python-version }}"
           REDIS_HOST: "localhost"
         run: pytest
+
+      - name: Install Scheduler Dependencies
+        run: |
+          cd scheduler
+          uv sync
+
+      - name: Run Scheduler Tests
+        run: |
+          cd scheduler
+          uv run pytest
+
+      - name: Upload Coverage to Coveralls
+        if: matrix.python-version == '3.12'
+        uses: coverallsapp/github-action@v2
+        with:
+          file: ./scheduler/coverage.xml
+          parallel: true
+          flag-name: scheduler
+
+      - name: Display Scheduler Coverage Metrics for scheduler tests
+        if: matrix.python-version == '3.12'
+        uses: 5monkeys/cobertura-action@v14
+        with:
+          report_name: "Pytest Celery Scheduler Coverage"
+          path: ./scheduler/coverage.xml
+          minimum_coverage: "80"
