--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -18,7 +18,7 @@ services:
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
-      - /etc/vault.d/secrets/kv_root_security.env
+      - ${SECRETS_FILE:-/dev/null}
     volumes:
       - ./staticfiles:/staticfiles
     healthcheck:
