fix(secrets-file): oops they changed the format on making something optional
https://github.com/compose-spec/compose-spec/pull/448/changes

--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -18,7 +18,8 @@ services:
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
-      - ${SECRETS_FILE:-/dev/null}
+      - '/etc/vault.d/secrets/kv_root_security.env'
+        required: false
     volumes:
       - ./staticfiles:/staticfiles
     healthcheck:
