fix(compose): fix syntax on the optional env_file

--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -18,7 +18,7 @@ services:
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
-      - '/etc/vault.d/secrets/kv_root_security.env'
+      - path: '/etc/vault.d/secrets/kv_root_security.env'
         required: false
     volumes:
       - ./staticfiles:/staticfiles
